--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@ body{
 canvas{
   background:white;
 }
+
+.scoreboard {
+  border:solid black 3px;
+  display: flex;
+  justify-content:space-around;
+
+}
